// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTextColor is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiTextColor euiTextColor--default testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiTextColor props color is rendered with custom color 1`] = `
<span
  class="euiTextColor euiTextColor--custom"
  style="color:#ff0000"
>
  <p>
    Content
  </p>
</span>
`;

exports[`EuiTextColor props color is rendered with named color 1`] = `
<span
  class="euiTextColor euiTextColor--warning"
>
  <p>
    Content
  </p>
</span>
`;
